# python-certificate-generator

./: .gitignore  CHANGELOG.md  COMMIT_MESSAGE_GUIDELINES.md  CONTRIBUTING.md  Certificate_Template.docx  README.md  SECURITY.md  TODO.md  data.csv  data.xlsx  main.py  pyproject.toml  requirements.txt
output/: 1 - Example Name 1.docx  10 - Example Name 10.docx  2 - Example Name 2.docx  3 - Example Name 3.docx  4 - Example Name 4.docx  5 - Example Name 5.docx  6 - Example Name 6.docx  7 - Example Name 7.docx  8 - Example Name 8.docx  9 - Example Name 9.docx
