[project]
name = "python-certificate-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docx2pdf>=0.1.8",
    "docxtpl>=0.20.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "requests>=2.32.5",
    "setuptools<81",
]
